# poc-resume-tailoring-py

./: .gitignore  CLAUDE.md  MODELS.md  README.md  pyproject.toml  run-all.sh  run.sh  validate
samples/: cv.md  job.md
src/commitcurry/: __init__.py  cv_optimizer.py  main.py
src/commitcurry/config/: __init__.py  logging.py
src/commitcurry/models/: base.py  factory.py  gemini.py  ollama.py
src/commitcurry/providers/: __init__.py  base.py  factory.py  gemini.py  ollama.py
src/commitcurry/templates/: cv_optimization_prompt.txt
tests/: __init__.py  test_cv_optimizer.py  test_main.py  test_model_factory.py
